# dashgo-navrl-project

./: .gitignore  AGENTS.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
apps/isaac/: eval_worker.py  train_navrl.py  validate_raycast_backend.py
configs/robot/: dashgo_driver.yaml
configs/train/: train.yaml
configs/train/profiles/: formal.yaml  main.yaml  pilot.yaml  smoke.yaml
docs/: formal_repair_validation_2026-04-02_23-08.md  navrl_longrun_retro_2026-04-02_22-28.md  navrl_upstream_diff_2026-03-27.md  phase1_formal_comparison_2026-04-02.md  phase2_real_robot_boundary_2026-04-02.md
src/dashgo_rl/: __init__.py  dashgo_assets.py  dashgo_config.py  dashgo_env_navrl_official.py  dashgo_env_v2.py  project_paths.py
src/navrl_dashgo/: __init__.py  checkpointing.py  comparison.py  env_adapter.py  metrics.py  ppo.py  runtime.py  semantics.py  torchrl_utils.py  types.py
tests/: test_autonomous_training_cycle.py  test_benchmark_train_modes.py  test_checkpointing_resume.py  test_comparison.py  test_env_and_ppo_guards.py  test_eval_worker_flow.py  test_navrl_semantics.py
tools/: autonomous_training_cycle.py  background_train.py  benchmark_train_modes.py  compare_models.py  eval_checkpoint.py  watch_background_train_until.py
