[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashgo-navrl"
version = "0.1.0"
description = "DashGo x NavRL-style training stack on Isaac Lab 2.0.2 / Isaac Sim 4.5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "omegaconf>=2.3.0",
  "hydra-core>=1.3.2",
  "einops>=0.8.0",
  "PyYAML>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
